--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 
     <application
@@ -18,25 +19,31 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <!-- <receiver android:name=".DownloadingBroadcastReceiver__"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED"
+                        android:enabled="true"/>
             </intent-filter>
-        </activity>
-
-        <!-- Описание разрешения работы сервиса в манифесте -->
-        <service android:name=".DownloadingService"/>
+        </receiver> -->
 
         <!-- https://developer.android.com/guide/topics/manifest/receiver-element -->
         <!-- Сервис-получатель сообщений о загрузке -->
         <!-- android:exported="false" - не получать события от других приложений -->
         <!-- Если имя класса начинается с точки - тогда вставляем префикс в виде имени пакета выше -->
-        <!--<receiver
-            android:name="com.example.downloadingtest.DownloadingBroadcastReceiver"
+        <!-- <receiver android:name="com.example.downloadingtest.DownloadingBroadcastReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter android:priority="9999">
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED"
+                        android:enabled="true"/>
+                <action android:name="android.app.DownloadManager.ACTION_NOTIFICATION_CLICKED"
+                        android:enabled="true"/>
+                <action android:name="android.intent.action.AIRPLANE_MODE"
+                    android:enabled="true"/>
+            </intent-filter> -->
+            <!-- <intent-filter android:priority="9999">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_PRESENT"/>
                 <action android:name="android.intent.action.ACTION_SCREEN_ON"/>
@@ -50,8 +57,18 @@
                 <action android:name="android.app.DownloadManager.ACTION_DOWNLOAD_COMPLETE"/>
                 <action android:name="android.app.DownloadManager.ACTION_NOTIFICATION_CLICKED"/>
                 <action android:name="android.app.DownloadManager.ACTION_VIEW_DOWNLOADS"/>
+            </intent-filter> -->
+        <!--</receiver>-->
+
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </receiver>-->
+        </activity>
+
+        <!-- Описание разрешения работы сервиса в манифесте -->
+        <!--<service android:name=".DownloadingService"/> -->
 
     </application>
 
